[package]
name = "opensea-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensea = { path = "../opensea" }
ethers = { version = "0.5.1", features = ["abigen"] }
tokio = { version = "1.9.0", features = ["macros"] }
gumdrop = "0.8.0"
color-eyre = "0.5.11"
hex = "0.4.3"

ethers-flashbots = { version = "0.4.0" }
structopt = "0.3.22"
url = "2.2.2"
serde_json = "1.0.64"
