[package]
name = "opensea"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
thiserror = "1.0.26"
serde = "1.0.126"
serde_json = "1.0.64"
once_cell = "1.8.0"
chrono = "0.4.19"
ethers = { version = "0.5.1", features = ["abigen"] }
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.9.0", features = ["macros"] }
